# Dynamic-Light-Scattering

./: .gitignore  BrownianUpdate.h  BrownianUpdate.inl  Configuration.h  Constant.h  LICENSE.txt  Laser.h  Laser.inl  ParticleBox.h  ParticleBox.inl  ParticleType.h  Point.h  README.md
Application/: CMakeLists.txt
Application/LaserWithImagerAtAngle/: CMakeLists.txt
Application/LaserWithPhotodiodeAtAngle/: CMakeLists.txt
Application/LaserWithPhotodiodeAtAngle/Source/: LaserWithPhotodiodeAtAngle.cc
Application/TestApp/: CMakeLists.txt
Application/TestApp/Data/: test.out
Application/TestApp/Source/: TestApp.cc
Common/: Assert.h  Common.h  Compiler.h  Status.h  System.h
Data/: Readme.txt  mie_500_10000_99_10_10.data  mie_500_10000_99_15_0.data  mie_500_1000_99_10_10.data  mie_500_1000_99_15_0.data  mie_500_100_99_10_10.data  mie_500_100_99_15_0.data  mie_500_1100_99_10_10.data  mie_500_1100_99_15_0.data  mie_500_1200_99_10_10.data  mie_500_1200_99_15_0.data  mie_500_1300_99_10_10.data  mie_500_1300_99_15_0.data  mie_500_1400_99_10_10.data  mie_500_1400_99_15_0.data  mie_500_1500_99_10_10.data  mie_500_1500_99_15_0.data  mie_500_1600_99_10_10.data  mie_500_1600_99_15_0.data  mie_500_1700_99_10_10.data  (+181 more)
UnitTests/: CMakeLists.txt
UnitTests/Math/Geometry/PlaneAngle/: CMakeLists.txt
UnitTests/Math/Geometry/PlaneAngle/Source/: PlaneAngle.cc
UnitTests/Physics/CMOSImager/: CMakeLists.txt
UnitTests/Physics/CMOSImager/Source/: CMOSImager.cc
UnitTests/Utils/StringToNumber/: CMakeLists.txt
UnitTests/Utils/StringToNumber/Source/: StringToNumber.cc
(+32 files in other folders)
